--- a/templates/emails/enquiry-notification.hbs
+++ b/templates/emails/enquiry-notification.hbs
@@ -1,27 +1,15 @@
-<h1>Hi %recipient.firstName%</h1>
-<p class="text-larger">An enquiry was just submitted to {{brand}}:</p>
+<h1>{{enquiry.name}} wants to get in touch</h1>
+
 {{#if enquiry.email}}
-	<p class="text-larger">From
-	{{#if enquiry.name.full}}
-		<strong>{{enquiry.name.full}}</strong>
-	{{/if}}
-
-	{{#if enquiry.email}}
-		(<a href="mailto:{{enquiry.email}}">{{enquiry.email}}</a>)
-	{{/if}}
-	</p>
-
-	{{#if enquiry.phone}}
-		<p class="text-larger">Phone: {{enquiry.phone}}</p>
-	{{/if}}
-
-	{{#if enquiry.enquiryType}}
-		<p class="text-larger">{{underscoreFormat enquiry 'enquiryType'}}</p>
-	{{/if}}
-
-	{{#if enquiry.message}}
-		{{{enquiry.message.html}}}
-	{{/if}}
-
-	<p class="text-muted">Sent {{underscoreFormat enquiry 'createdAt'}}</p>
+	<p>Email: <a href="mailto:{{enquiry.email}}">{{enquiry.email}}</a></p>
 {{/if}}
+
+{{#if enquiry.phone}}
+	<p class="text-larger">Phone: {{enquiry.phone}}</p>
+{{/if}}
+
+{{#if enquiry.message}}
+	<p>{{enquiry.message}}</p>
+{{/if}}
+
+<p class="text-muted"><small><em>Sent {{underscoreFormat enquiry 'createdAt'}}<em></small></p>
